--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <canvas class="webgl" id="canvas"></canvas>
+    <div class="loader">
+        <svg class="svg-loader rotating" width="100%" height="100%" viewBox="0 0 125 125" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><rect id="Plan-de-travail1" serif:id="Plan de travail1" x="0" y="0" width="125" height="125" style="fill:none;"/><clipPath id="_clip1"><rect id="Plan-de-travail11" serif:id="Plan de travail1" x="0" y="0" width="125" height="125"/></clipPath><g clip-path="url(#_clip1)"><path d="M31.521,57.086l-31.521,0c2.758,-31.964 29.708,-57.086 62.5,-57.086c32.792,0 59.742,25.122 62.5,57.086l-31.521,0c-2.578,-14.715 -15.476,-25.917 -30.979,-25.917c-15.503,0 -28.401,11.202 -30.979,25.917Zm61.958,10.828l31.521,-0c-2.758,31.964 -29.708,57.086 -62.5,57.086c-32.792,0 -59.742,-25.122 -62.5,-57.086l31.521,-0c2.578,14.715 15.476,25.917 30.979,25.917c15.503,-0 28.401,-11.202 30.979,-25.917Zm-30.979,-25.578c11.17,0 20.239,9.035 20.239,20.164c-0,11.129 -9.069,20.164 -20.239,20.164c-11.17,-0 -20.239,-9.035 -20.239,-20.164c0,-11.129 9.069,-20.164 20.239,-20.164Z" style="fill:#fff;"/></g></svg>
+        <div class="welcome-div">
+            <div class="welcome-text"> 
+                <h1>Welcome <br> to the pokeball build kit Puzzle </h1>
+            </div>
+            <button class="startButton">START</button>
+        </div>
+    </div>
     <script type="module" src="./webgl/App.ts"></script>
     <script src="https://cdn.impossible.io/sdk/fx-sdk-latest.js"></script>
     <div id="container"></div>
