--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
         <div class="welcome-div">
             <div class="welcome-text"> 
                 <h1>Welcome <br> to the pokeball build kit Puzzle </h1>
+                <h2>Re build your pokeball in the right order and as quickly as possible</h2>
             </div>
-            <button class="startButton">START</button>
+            <button class="startButton">PLAY</button>
         </div>
     </div>
     <script type="module" src="./webgl/App.ts"></script>
