--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three JS Starter</title>
+    <title>Pokeball Build Kit Puzzle</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
