--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
             <button class="startButton">PLAY</button>
         </div>
     </div>
+    <div class="chrono startButton">
+        <div class="chrono-text">
+            <h2 class="time">00:00:00</h2>
+        </div>
+    </div>
     <script type="module" src="./webgl/App.ts"></script>
     <script src="https://cdn.impossible.io/sdk/fx-sdk-latest.js"></script>
     <div id="container"></div>
