Add restart possibility

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,18 @@
             <button class="startButton">PLAY</button>
         </div>
     </div>
-    <div class="chrono startButton">
+    <div class="chrono">
         <div class="chrono-text">
             <h2 class="time">00:00:00</h2>
+        </div>
+    </div>
+    <div class="endScreen">
+        <div class="endScreen-text">
+            <h1>Well done !</h1>
+            <h2>you finished the puzzle in <span class="time"></span></h2>
+        </div>
+        <div class="restartButtonDiv">
+            <button class="restartButton">RESTART</button>
         </div>
     </div>
     <script type="module" src="./webgl/App.ts"></script>
